@@ -11,6 +11,8 @@ package com.java.z_exam.sync;
 
 import org.openjdk.jol.info.ClassLayout;
 
+import java.util.concurrent.TimeUnit;
+
 /**
  * 假如锁处于偏向状态，这时来了竞争者，那么他的状态是什么？
  * 无锁：001
@@ -18,12 +20,14 @@ import org.openjdk.jol.info.ClassLayout;
  * 偏向锁：101
  * 重量级锁：10
  */
+// -XX:-UseBiasedLocking  禁用偏向锁，默认开启
+// -XX:BiasedLockingStartupDelay=0  提前启动偏向锁，默认系统启动4秒钟后启用偏向锁
 public class T04_HelloJOL {
     public static void main(String[] args) throws Exception {
-        // TimeUnit.SECONDS.sleep(5);
+        //TimeUnit.SECONDS.sleep(5);
 
-        A[] o = new A[1];
-        //Object o = new Object();
+        //A o = new A();
+        Object o = new Object();
         System.out.println(ClassLayout.parseInstance(o).toPrintable());
 
         synchronized (o) { // 锁定这个对象
